<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dacodes.naxon.activities.signin">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="REGÍSTRATE"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_toolbar"
            android:layout_gravity="center" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/name">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_city"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:layout_marginTop="10dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginTop="10dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_username"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_marginTop="10dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginTop="10dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_signin"
                android:layout_marginTop="20dp"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:text="@string/signin"
                android:background="@drawable/btn_corners"/>

        </LinearLayout>


    </ScrollView>



</LinearLayout>
