<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal"
    tools:context="com.dacodes.naxon.login_signin"
    android:background="@drawable/background">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:background="#33ffffff">


        <ImageView
            android:layout_width="@dimen/logo_login_width"
            android:layout_height="@dimen/logo_login_height"
            android:src="@drawable/logo"
            android:layout_marginBottom="20dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:gravity="center_horizontal|center_vertical"
            android:background="@drawable/edt_corners"
            android:paddingBottom="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/user">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />


        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="20dp"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_corners"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/btn_signin"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAlignment="center"
            android:text="@string/signin"/>

        </LinearLayout>


        <!--<com.facebook.login.widget.LoginButton-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="wrap_content"/>-->

    </LinearLayout>



</LinearLayout>
